--- a/src/ToDoListAngular/app/views/Home.html
+++ b/src/ToDoListAngular/app/views/Home.html
@@ -1,3 +1,6 @@
 ﻿<div>
-    <p>This sample demonstrates how to use API definitions, code definition, CORS, and authentication features of API Apps in Azure App Service. For more information, see <a href="https://azure.microsoft.com/documentation/articles/app-service-api-dotnet-get-started/">the tutorial that accompanies the sample</a>.</p>
+    <p>This demo demonstrates how to use Azure Cognitive Service, ML.NET and a custom model built by Kristina Sörensen with Azure Machine Learning Studio.</p>
+    <p>For more information about the Azure cognitive service Text sentiment analysis used in this demo, see <a href="https://azure.microsoft.com/en-gb/services/cognitive-services/text-analytics/">here</a>.</p>
+    <p>For more information about ML.NET, see <a href="https://www.microsoft.com/net/learn/machinelearning-ai/what-is-mldotnet">here</a>.</p>
+    <p>For more information about Azure Machine Learning Studio, see <a href="https://azure.microsoft.com/en-us/services/machine-learning-studio/">here</a>.</p>
 </div>
