--- a/src/ToDoListAngular/index.cshtml
+++ b/src/ToDoListAngular/index.cshtml
@@ -18,12 +18,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#/Home">Azure App Service API Apps Sample</a>
+                <a class="navbar-brand" href="#/Home">Azure Web App AI demo</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li ng-class="{ active: isActive('/Home') }"><a href="#/Home">Home</a></li>
-                    <li ng-class="{ active: isActive('/TodoList') }"><a href="#/TodoList">Todo List</a></li>
+                    <li ng-class="{ active: isActive('/TodoList') }"><a href="#/TodoList">Twitter feed</a></li>
                     <li ng-class="{ active: isActive('/UserData') }"><a href="#/UserData" ng-show="userInfo.isAuthenticated">User</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
@@ -40,7 +40,7 @@
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1" style="background-color:azure">
                 <div class="page-header">
-                    <h1>Todo List</h1>
+                    <h1>Build intelligent applications with Azure</h1>
                 </div>
             </div>
         </div>
