--- a/src/ToDoListAngular/index.cshtml
+++ b/src/ToDoListAngular/index.cshtml
@@ -23,7 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li ng-class="{ active: isActive('/Home') }"><a href="#/Home">Home</a></li>
-                    <li ng-class="{ active: isActive('/TodoList') }"><a href="#/TodoList">Twitter feed</a></li>
+                    <li ng-class="{ active: isActive('/TodoList') }"><a href="#/TodoList">Sentiment</a></li>
                     <li ng-class="{ active: isActive('/UserData') }"><a href="#/UserData" ng-show="userInfo.isAuthenticated">User</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
