Added ML.NET. Needed to be .NET Core proj in order to predict. Not working at the moment. Work in progress...

--- a/src/ToDoListAngular/app/views/TodoList.html
+++ b/src/ToDoListAngular/app/views/TodoList.html
@@ -24,7 +24,7 @@
                 <table class="table table-striped">
     <tbody>
         <tr data-ng-repeat="item in todoList">
-            <td ng-class='{red : item.Sentiment <= 0.3, green : item.Sentiment > 0.7}'>
+            <td ng-class='{red : item.CognitiveSentiment <= 0.3, green : item.CognitiveSentiment > 0.7}'>
                 <p data-ng-hide="item.edit">{{item.Description}}</p>
                 <input data-ng-show="item.edit" type="text" data-ng-model="editInProgressTodo.Description" class="form-control" />
             </td>
@@ -37,7 +37,7 @@
                     <table class="table table-striped">
                         <tbody>
                             <tr data-ng-repeat="item in todoList">
-                                <td ng-class='{red : item.Sentiment <= 0.3, green : item.Sentiment > 0.7}'>
+                                <td ng-class='{red : item.MlNetSentiment <= 0.3, green : item.MlNetSentiment > 0.7}'>
                                     <p data-ng-hide="item.edit">{{item.Description}}</p>
                                     <input data-ng-show="item.edit" type="text" data-ng-model="editInProgressTodo.Description" class="form-control" />
                                 </td>
@@ -63,7 +63,6 @@
         </table>
         </div>
     </div>
-</div>
 
 <style>
    
